# text-to-sql

./: .gitignore  README.md  dev_gold_test.sql  inference.py  inference_query_only_unconstrained.py  pyproject.toml  rough.ipynb  train_custom.py  training.py  training_query_only.py  training_query_only_adafactor.py  training_query_only_trainer.py
predictions/: dev_prediction.txt  dev_prediction_Qwen2.5-0.5B-Instruct.txt  dev_prediction_Qwen2.5-1.5B-Instruct.txt  dev_prediction_Qwen2.5-7B-Instruct.txt  query_only_unconstrained_predictions.txt  query_only_unconstrained_predictions_checkpoint_step_3500.txt  query_only_unconstrained_predictions_checkpoint_step_5500.txt  query_only_unconstrained_predictions_final_model_query_only_Qwen2.5-7B-Instruct.txt
